fix beta overflow

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -37,6 +37,7 @@ body {
 
 html, body, #map {
     height: 100%;
+    overflow: hidden;
 }
 
 main {
